var annotated_dup =
[
    [ "Application", "namespace_application.html", [
      [ "ClientInterfaces", "namespace_application_1_1_client_interfaces.html", [
        [ "IClassClient", "interface_application_1_1_client_interfaces_1_1_i_class_client.html", "interface_application_1_1_client_interfaces_1_1_i_class_client" ],
        [ "IFeedbackClient", "interface_application_1_1_client_interfaces_1_1_i_feedback_client.html", "interface_application_1_1_client_interfaces_1_1_i_feedback_client" ],
        [ "IHandInHomeworkClient", "interface_application_1_1_client_interfaces_1_1_i_hand_in_homework_client.html", "interface_application_1_1_client_interfaces_1_1_i_hand_in_homework_client" ],
        [ "IHomeworkClient", "interface_application_1_1_client_interfaces_1_1_i_homework_client.html", "interface_application_1_1_client_interfaces_1_1_i_homework_client" ],
        [ "ILessonClient", "interface_application_1_1_client_interfaces_1_1_i_lesson_client.html", "interface_application_1_1_client_interfaces_1_1_i_lesson_client" ],
        [ "IUserClient", "interface_application_1_1_client_interfaces_1_1_i_user_client.html", "interface_application_1_1_client_interfaces_1_1_i_user_client" ]
      ] ],
      [ "gRPCClients", "namespace_application_1_1g_r_p_c_clients.html", [
        [ "ClassClient", "class_application_1_1g_r_p_c_clients_1_1_class_client.html", "class_application_1_1g_r_p_c_clients_1_1_class_client" ],
        [ "FeedbackClient", "class_application_1_1g_r_p_c_clients_1_1_feedback_client.html", "class_application_1_1g_r_p_c_clients_1_1_feedback_client" ],
        [ "HandInHomeworkClient", "class_application_1_1g_r_p_c_clients_1_1_hand_in_homework_client.html", "class_application_1_1g_r_p_c_clients_1_1_hand_in_homework_client" ],
        [ "HomeworkClient", "class_application_1_1g_r_p_c_clients_1_1_homework_client.html", "class_application_1_1g_r_p_c_clients_1_1_homework_client" ],
        [ "LessonClient", "class_application_1_1g_r_p_c_clients_1_1_lesson_client.html", "class_application_1_1g_r_p_c_clients_1_1_lesson_client" ],
        [ "UserClient", "class_application_1_1g_r_p_c_clients_1_1_user_client.html", "class_application_1_1g_r_p_c_clients_1_1_user_client" ]
      ] ],
      [ "Logic", "namespace_application_1_1_logic.html", [
        [ "ClassLogic", "class_application_1_1_logic_1_1_class_logic.html", "class_application_1_1_logic_1_1_class_logic" ],
        [ "FeedbackLogic", "class_application_1_1_logic_1_1_feedback_logic.html", "class_application_1_1_logic_1_1_feedback_logic" ],
        [ "HandInHomeworkLogic", "class_application_1_1_logic_1_1_hand_in_homework_logic.html", "class_application_1_1_logic_1_1_hand_in_homework_logic" ],
        [ "HomeworkLogic", "class_application_1_1_logic_1_1_homework_logic.html", "class_application_1_1_logic_1_1_homework_logic" ],
        [ "LessonLogic", "class_application_1_1_logic_1_1_lesson_logic.html", "class_application_1_1_logic_1_1_lesson_logic" ],
        [ "UserLogic", "class_application_1_1_logic_1_1_user_logic.html", "class_application_1_1_logic_1_1_user_logic" ]
      ] ],
      [ "LogicInterfaces", "namespace_application_1_1_logic_interfaces.html", [
        [ "IClassLogic", "interface_application_1_1_logic_interfaces_1_1_i_class_logic.html", "interface_application_1_1_logic_interfaces_1_1_i_class_logic" ],
        [ "IFeedbackLogic", "interface_application_1_1_logic_interfaces_1_1_i_feedback_logic.html", "interface_application_1_1_logic_interfaces_1_1_i_feedback_logic" ],
        [ "IHandInHomeworkLogic", "interface_application_1_1_logic_interfaces_1_1_i_hand_in_homework_logic.html", "interface_application_1_1_logic_interfaces_1_1_i_hand_in_homework_logic" ],
        [ "IHomeworkLogic", "interface_application_1_1_logic_interfaces_1_1_i_homework_logic.html", "interface_application_1_1_logic_interfaces_1_1_i_homework_logic" ],
        [ "ILessonLogic", "interface_application_1_1_logic_interfaces_1_1_i_lesson_logic.html", "interface_application_1_1_logic_interfaces_1_1_i_lesson_logic" ],
        [ "IUserLogic", "interface_application_1_1_logic_interfaces_1_1_i_user_logic.html", "interface_application_1_1_logic_interfaces_1_1_i_user_logic" ]
      ] ]
    ] ],
    [ "Domain", "namespace_domain.html", [
      [ "DTOs", "namespace_domain_1_1_d_t_os.html", [
        [ "ClassDTO", "namespace_domain_1_1_d_t_os_1_1_class_d_t_o.html", [
          [ "ClassCreationDTO", "class_domain_1_1_d_t_os_1_1_class_d_t_o_1_1_class_creation_d_t_o.html", "class_domain_1_1_d_t_os_1_1_class_d_t_o_1_1_class_creation_d_t_o" ],
          [ "ClassUpdateDTO", "class_domain_1_1_d_t_os_1_1_class_d_t_o_1_1_class_update_d_t_o.html", "class_domain_1_1_d_t_os_1_1_class_d_t_o_1_1_class_update_d_t_o" ],
          [ "SearchClassAttendanceDTO", "class_domain_1_1_d_t_os_1_1_class_d_t_o_1_1_search_class_attendance_d_t_o.html", "class_domain_1_1_d_t_os_1_1_class_d_t_o_1_1_search_class_attendance_d_t_o" ],
          [ "SearchClassDTO", "class_domain_1_1_d_t_os_1_1_class_d_t_o_1_1_search_class_d_t_o.html", "class_domain_1_1_d_t_os_1_1_class_d_t_o_1_1_search_class_d_t_o" ],
          [ "SearchClassParticipantsDTO", "class_domain_1_1_d_t_os_1_1_class_d_t_o_1_1_search_class_participants_d_t_o.html", "class_domain_1_1_d_t_os_1_1_class_d_t_o_1_1_search_class_participants_d_t_o" ]
        ] ],
        [ "FeedbackDTO", "namespace_domain_1_1_d_t_os_1_1_feedback_d_t_o.html", [
          [ "AddFeedbackDTO", "class_domain_1_1_d_t_os_1_1_feedback_d_t_o_1_1_add_feedback_d_t_o.html", "class_domain_1_1_d_t_os_1_1_feedback_d_t_o_1_1_add_feedback_d_t_o" ]
        ] ],
        [ "HomeworkDTO", "namespace_domain_1_1_d_t_os_1_1_homework_d_t_o.html", [
          [ "HomeworkCreationDTO", "class_domain_1_1_d_t_os_1_1_homework_d_t_o_1_1_homework_creation_d_t_o.html", "class_domain_1_1_d_t_os_1_1_homework_d_t_o_1_1_homework_creation_d_t_o" ],
          [ "HomeworkHandInDTO", "class_domain_1_1_d_t_os_1_1_homework_d_t_o_1_1_homework_hand_in_d_t_o.html", "class_domain_1_1_d_t_os_1_1_homework_d_t_o_1_1_homework_hand_in_d_t_o" ]
        ] ],
        [ "LessonDTO", "namespace_domain_1_1_d_t_os_1_1_lesson_d_t_o.html", [
          [ "LessonAttendanceDTO", "class_domain_1_1_d_t_os_1_1_lesson_d_t_o_1_1_lesson_attendance_d_t_o.html", "class_domain_1_1_d_t_os_1_1_lesson_d_t_o_1_1_lesson_attendance_d_t_o" ],
          [ "LessonCreationDTO", "class_domain_1_1_d_t_os_1_1_lesson_d_t_o_1_1_lesson_creation_d_t_o.html", "class_domain_1_1_d_t_os_1_1_lesson_d_t_o_1_1_lesson_creation_d_t_o" ],
          [ "LessonUpdateDTO", "class_domain_1_1_d_t_os_1_1_lesson_d_t_o_1_1_lesson_update_d_t_o.html", "class_domain_1_1_d_t_os_1_1_lesson_d_t_o_1_1_lesson_update_d_t_o" ],
          [ "MarkAttendanceDTO", "class_domain_1_1_d_t_os_1_1_lesson_d_t_o_1_1_mark_attendance_d_t_o.html", "class_domain_1_1_d_t_os_1_1_lesson_d_t_o_1_1_mark_attendance_d_t_o" ]
        ] ],
        [ "UserDTO", "namespace_domain_1_1_d_t_os_1_1_user_d_t_o.html", [
          [ "UserAttendanceDTO", "class_domain_1_1_d_t_os_1_1_user_d_t_o_1_1_user_attendance_d_t_o.html", "class_domain_1_1_d_t_os_1_1_user_d_t_o_1_1_user_attendance_d_t_o" ],
          [ "UserCreationDTO", "class_domain_1_1_d_t_os_1_1_user_d_t_o_1_1_user_creation_d_t_o.html", "class_domain_1_1_d_t_os_1_1_user_d_t_o_1_1_user_creation_d_t_o" ],
          [ "UserLoginDTO", "class_domain_1_1_d_t_os_1_1_user_d_t_o_1_1_user_login_d_t_o.html", "class_domain_1_1_d_t_os_1_1_user_d_t_o_1_1_user_login_d_t_o" ]
        ] ]
      ] ],
      [ "Models", "namespace_domain_1_1_models.html", [
        [ "ClassEntity", "class_domain_1_1_models_1_1_class_entity.html", "class_domain_1_1_models_1_1_class_entity" ],
        [ "Feedback", "class_domain_1_1_models_1_1_feedback.html", "class_domain_1_1_models_1_1_feedback" ],
        [ "HandInHomework", "class_domain_1_1_models_1_1_hand_in_homework.html", "class_domain_1_1_models_1_1_hand_in_homework" ],
        [ "Homework", "class_domain_1_1_models_1_1_homework.html", "class_domain_1_1_models_1_1_homework" ],
        [ "Lesson", "class_domain_1_1_models_1_1_lesson.html", "class_domain_1_1_models_1_1_lesson" ],
        [ "User", "class_domain_1_1_models_1_1_user.html", "class_domain_1_1_models_1_1_user" ]
      ] ]
    ] ],
    [ "gRPCClient", "namespaceg_r_p_c_client.html", [
      [ "ClassData", "classg_r_p_c_client_1_1_class_data.html", "classg_r_p_c_client_1_1_class_data" ],
      [ "ClassEntityCreation", "classg_r_p_c_client_1_1_class_entity_creation.html", "classg_r_p_c_client_1_1_class_entity_creation" ],
      [ "Feedback", "classg_r_p_c_client_1_1_feedback.html", "classg_r_p_c_client_1_1_feedback" ],
      [ "HandInHomework", "classg_r_p_c_client_1_1_hand_in_homework.html", "classg_r_p_c_client_1_1_hand_in_homework" ],
      [ "Homework", "classg_r_p_c_client_1_1_homework.html", "classg_r_p_c_client_1_1_homework" ],
      [ "LessonAttendance", "classg_r_p_c_client_1_1_lesson_attendance.html", "classg_r_p_c_client_1_1_lesson_attendance" ],
      [ "LessonAttended", "classg_r_p_c_client_1_1_lesson_attended.html", "classg_r_p_c_client_1_1_lesson_attended" ],
      [ "LessonData", "classg_r_p_c_client_1_1_lesson_data.html", "classg_r_p_c_client_1_1_lesson_data" ],
      [ "LessonOverview", "classg_r_p_c_client_1_1_lesson_overview.html", "classg_r_p_c_client_1_1_lesson_overview" ],
      [ "RequestAddFeedback", "classg_r_p_c_client_1_1_request_add_feedback.html", "classg_r_p_c_client_1_1_request_add_feedback" ],
      [ "RequestAddHomework", "classg_r_p_c_client_1_1_request_add_homework.html", "classg_r_p_c_client_1_1_request_add_homework" ],
      [ "RequestCreateClassEntity", "classg_r_p_c_client_1_1_request_create_class_entity.html", "classg_r_p_c_client_1_1_request_create_class_entity" ],
      [ "RequestCreateHandInHomework", "classg_r_p_c_client_1_1_request_create_hand_in_homework.html", "classg_r_p_c_client_1_1_request_create_hand_in_homework" ],
      [ "RequestCreateLesson", "classg_r_p_c_client_1_1_request_create_lesson.html", "classg_r_p_c_client_1_1_request_create_lesson" ],
      [ "RequestCreateUser", "classg_r_p_c_client_1_1_request_create_user.html", "classg_r_p_c_client_1_1_request_create_user" ],
      [ "RequestDeleteLesson", "classg_r_p_c_client_1_1_request_delete_lesson.html", "classg_r_p_c_client_1_1_request_delete_lesson" ],
      [ "RequestDeleteUser", "classg_r_p_c_client_1_1_request_delete_user.html", "classg_r_p_c_client_1_1_request_delete_user" ],
      [ "RequestGetAttendance", "classg_r_p_c_client_1_1_request_get_attendance.html", "classg_r_p_c_client_1_1_request_get_attendance" ],
      [ "RequestGetClassAttendance", "classg_r_p_c_client_1_1_request_get_class_attendance.html", "classg_r_p_c_client_1_1_request_get_class_attendance" ],
      [ "RequestGetClassAttendanceByUsername", "classg_r_p_c_client_1_1_request_get_class_attendance_by_username.html", "classg_r_p_c_client_1_1_request_get_class_attendance_by_username" ],
      [ "RequestGetClassEntities", "classg_r_p_c_client_1_1_request_get_class_entities.html", "classg_r_p_c_client_1_1_request_get_class_entities" ],
      [ "RequestGetClassEntity", "classg_r_p_c_client_1_1_request_get_class_entity.html", "classg_r_p_c_client_1_1_request_get_class_entity" ],
      [ "RequestGetClassEntityByStudentUsername", "classg_r_p_c_client_1_1_request_get_class_entity_by_student_username.html", "classg_r_p_c_client_1_1_request_get_class_entity_by_student_username" ],
      [ "RequestGetClassParticipants", "classg_r_p_c_client_1_1_request_get_class_participants.html", "classg_r_p_c_client_1_1_request_get_class_participants" ],
      [ "RequestGetFeedbackByHandInIdAndStudentUsername", "classg_r_p_c_client_1_1_request_get_feedback_by_hand_in_id_and_student_username.html", "classg_r_p_c_client_1_1_request_get_feedback_by_hand_in_id_and_student_username" ],
      [ "RequestGetFeedbackById", "classg_r_p_c_client_1_1_request_get_feedback_by_id.html", "classg_r_p_c_client_1_1_request_get_feedback_by_id" ],
      [ "RequestGetHandInByHomeworkIdAndStudentUsername", "classg_r_p_c_client_1_1_request_get_hand_in_by_homework_id_and_student_username.html", "classg_r_p_c_client_1_1_request_get_hand_in_by_homework_id_and_student_username" ],
      [ "RequestGetHandInHomework", "classg_r_p_c_client_1_1_request_get_hand_in_homework.html", "classg_r_p_c_client_1_1_request_get_hand_in_homework" ],
      [ "RequestGetHandInsByHomeworkId", "classg_r_p_c_client_1_1_request_get_hand_ins_by_homework_id.html", "classg_r_p_c_client_1_1_request_get_hand_ins_by_homework_id" ],
      [ "RequestGetLessonById", "classg_r_p_c_client_1_1_request_get_lesson_by_id.html", "classg_r_p_c_client_1_1_request_get_lesson_by_id" ],
      [ "RequestGetLessonExtendedByHomeworkHandInFeedback", "classg_r_p_c_client_1_1_request_get_lesson_extended_by_homework_hand_in_feedback.html", "classg_r_p_c_client_1_1_request_get_lesson_extended_by_homework_hand_in_feedback" ],
      [ "RequestGetLessonsByClassId", "classg_r_p_c_client_1_1_request_get_lessons_by_class_id.html", "classg_r_p_c_client_1_1_request_get_lessons_by_class_id" ],
      [ "RequestMarkAttendance", "classg_r_p_c_client_1_1_request_mark_attendance.html", "classg_r_p_c_client_1_1_request_mark_attendance" ],
      [ "RequestUpdateClassParticipants", "classg_r_p_c_client_1_1_request_update_class_participants.html", "classg_r_p_c_client_1_1_request_update_class_participants" ],
      [ "RequestUpdateLesson", "classg_r_p_c_client_1_1_request_update_lesson.html", "classg_r_p_c_client_1_1_request_update_lesson" ],
      [ "RequestUserGetByUsername", "classg_r_p_c_client_1_1_request_user_get_by_username.html", "classg_r_p_c_client_1_1_request_user_get_by_username" ],
      [ "ResponseAddFeedback", "classg_r_p_c_client_1_1_response_add_feedback.html", "classg_r_p_c_client_1_1_response_add_feedback" ],
      [ "ResponseAddHomework", "classg_r_p_c_client_1_1_response_add_homework.html", "classg_r_p_c_client_1_1_response_add_homework" ],
      [ "ResponseCreateClassEntity", "classg_r_p_c_client_1_1_response_create_class_entity.html", "classg_r_p_c_client_1_1_response_create_class_entity" ],
      [ "ResponseCreateLesson", "classg_r_p_c_client_1_1_response_create_lesson.html", "classg_r_p_c_client_1_1_response_create_lesson" ],
      [ "ResponseCreateUser", "classg_r_p_c_client_1_1_response_create_user.html", "classg_r_p_c_client_1_1_response_create_user" ],
      [ "ResponseDeleteLesson", "classg_r_p_c_client_1_1_response_delete_lesson.html", "classg_r_p_c_client_1_1_response_delete_lesson" ],
      [ "ResponseDeleteUser", "classg_r_p_c_client_1_1_response_delete_user.html", "classg_r_p_c_client_1_1_response_delete_user" ],
      [ "ResponseGetAttendance", "classg_r_p_c_client_1_1_response_get_attendance.html", "classg_r_p_c_client_1_1_response_get_attendance" ],
      [ "ResponseGetClassAttendance", "classg_r_p_c_client_1_1_response_get_class_attendance.html", "classg_r_p_c_client_1_1_response_get_class_attendance" ],
      [ "ResponseGetClassAttendanceByUsername", "classg_r_p_c_client_1_1_response_get_class_attendance_by_username.html", "classg_r_p_c_client_1_1_response_get_class_attendance_by_username" ],
      [ "ResponseGetClassEntities", "classg_r_p_c_client_1_1_response_get_class_entities.html", "classg_r_p_c_client_1_1_response_get_class_entities" ],
      [ "ResponseGetClassEntity", "classg_r_p_c_client_1_1_response_get_class_entity.html", "classg_r_p_c_client_1_1_response_get_class_entity" ],
      [ "ResponseGetClassParticipants", "classg_r_p_c_client_1_1_response_get_class_participants.html", "classg_r_p_c_client_1_1_response_get_class_participants" ],
      [ "ResponseGetFeedback", "classg_r_p_c_client_1_1_response_get_feedback.html", "classg_r_p_c_client_1_1_response_get_feedback" ],
      [ "ResponseGetHandInHomework", "classg_r_p_c_client_1_1_response_get_hand_in_homework.html", "classg_r_p_c_client_1_1_response_get_hand_in_homework" ],
      [ "ResponseGetHandInsByHomeworkId", "classg_r_p_c_client_1_1_response_get_hand_ins_by_homework_id.html", "classg_r_p_c_client_1_1_response_get_hand_ins_by_homework_id" ],
      [ "ResponseGetLessonById", "classg_r_p_c_client_1_1_response_get_lesson_by_id.html", "classg_r_p_c_client_1_1_response_get_lesson_by_id" ],
      [ "ResponseGetLessonsByClassId", "classg_r_p_c_client_1_1_response_get_lessons_by_class_id.html", "classg_r_p_c_client_1_1_response_get_lessons_by_class_id" ],
      [ "ResponseMarkAttendance", "classg_r_p_c_client_1_1_response_mark_attendance.html", "classg_r_p_c_client_1_1_response_mark_attendance" ],
      [ "ResponseUpdateClassParticipants", "classg_r_p_c_client_1_1_response_update_class_participants.html", "classg_r_p_c_client_1_1_response_update_class_participants" ],
      [ "ResponseUpdateLesson", "classg_r_p_c_client_1_1_response_update_lesson.html", "classg_r_p_c_client_1_1_response_update_lesson" ],
      [ "ResponseUserGetAllUsers", "classg_r_p_c_client_1_1_response_user_get_all_users.html", "classg_r_p_c_client_1_1_response_user_get_all_users" ],
      [ "ResponseUserGetByUsername", "classg_r_p_c_client_1_1_response_user_get_by_username.html", "classg_r_p_c_client_1_1_response_user_get_by_username" ],
      [ "UserData", "classg_r_p_c_client_1_1_user_data.html", "classg_r_p_c_client_1_1_user_data" ],
      [ "UserParticipant", "classg_r_p_c_client_1_1_user_participant.html", "classg_r_p_c_client_1_1_user_participant" ]
    ] ],
    [ "WebAPI", "namespace_web_a_p_i.html", [
      [ "Controllers", "namespace_web_a_p_i_1_1_controllers.html", [
        [ "AuthController", "class_web_a_p_i_1_1_controllers_1_1_auth_controller.html", "class_web_a_p_i_1_1_controllers_1_1_auth_controller" ],
        [ "ClassesController", "class_web_a_p_i_1_1_controllers_1_1_classes_controller.html", "class_web_a_p_i_1_1_controllers_1_1_classes_controller" ],
        [ "FeedbacksController", "class_web_a_p_i_1_1_controllers_1_1_feedbacks_controller.html", "class_web_a_p_i_1_1_controllers_1_1_feedbacks_controller" ],
        [ "HandInsController", "class_web_a_p_i_1_1_controllers_1_1_hand_ins_controller.html", "class_web_a_p_i_1_1_controllers_1_1_hand_ins_controller" ],
        [ "HomeworksController", "class_web_a_p_i_1_1_controllers_1_1_homeworks_controller.html", "class_web_a_p_i_1_1_controllers_1_1_homeworks_controller" ],
        [ "LessonsController", "class_web_a_p_i_1_1_controllers_1_1_lessons_controller.html", "class_web_a_p_i_1_1_controllers_1_1_lessons_controller" ],
        [ "UsersController", "class_web_a_p_i_1_1_controllers_1_1_users_controller.html", "class_web_a_p_i_1_1_controllers_1_1_users_controller" ]
      ] ]
    ] ],
    [ "xUnit", "namespacex_unit.html", [
      [ "Tests", "namespacex_unit_1_1_tests.html", [
        [ "ClassLogicTests", "classx_unit_1_1_tests_1_1_class_logic_tests.html", "classx_unit_1_1_tests_1_1_class_logic_tests" ],
        [ "FeedbackLogicTests", "classx_unit_1_1_tests_1_1_feedback_logic_tests.html", "classx_unit_1_1_tests_1_1_feedback_logic_tests" ],
        [ "HandInHomeworkLogicTests", "classx_unit_1_1_tests_1_1_hand_in_homework_logic_tests.html", "classx_unit_1_1_tests_1_1_hand_in_homework_logic_tests" ],
        [ "HomeworkLogicTests", "classx_unit_1_1_tests_1_1_homework_logic_tests.html", "classx_unit_1_1_tests_1_1_homework_logic_tests" ],
        [ "LessonLogicTests", "classx_unit_1_1_tests_1_1_lesson_logic_tests.html", "classx_unit_1_1_tests_1_1_lesson_logic_tests" ],
        [ "UserLogicTests", "classx_unit_1_1_tests_1_1_user_logic_tests.html", "classx_unit_1_1_tests_1_1_user_logic_tests" ]
      ] ]
    ] ]
];