var hierarchy =
[
    [ "Domain.DTOs.FeedbackDTO.AddFeedbackDTO", "class_domain_1_1_d_t_os_1_1_feedback_d_t_o_1_1_add_feedback_d_t_o.html", null ],
    [ "Domain.DTOs.ClassDTO.ClassCreationDTO", "class_domain_1_1_d_t_os_1_1_class_d_t_o_1_1_class_creation_d_t_o.html", null ],
    [ "Domain.Models.ClassEntity", "class_domain_1_1_models_1_1_class_entity.html", null ],
    [ "xUnit.Tests.ClassLogicTests", "classx_unit_1_1_tests_1_1_class_logic_tests.html", null ],
    [ "Domain.DTOs.ClassDTO.ClassUpdateDTO", "class_domain_1_1_d_t_os_1_1_class_d_t_o_1_1_class_update_d_t_o.html", null ],
    [ "grpc.ClientBase", null, [
      [ "gRPCClient.ClassEntityService.ClassEntityServiceClient", "classg_r_p_c_client_1_1_class_entity_service_1_1_class_entity_service_client.html", null ],
      [ "gRPCClient.FeedbackService.FeedbackServiceClient", "classg_r_p_c_client_1_1_feedback_service_1_1_feedback_service_client.html", null ],
      [ "gRPCClient.HandInHomeworkService.HandInHomeworkServiceClient", "classg_r_p_c_client_1_1_hand_in_homework_service_1_1_hand_in_homework_service_client.html", null ],
      [ "gRPCClient.HomeworkService.HomeworkServiceClient", "classg_r_p_c_client_1_1_homework_service_1_1_homework_service_client.html", null ],
      [ "gRPCClient.LessonService.LessonServiceClient", "classg_r_p_c_client_1_1_lesson_service_1_1_lesson_service_client.html", null ],
      [ "gRPCClient.UserService.UserServiceClient", "classg_r_p_c_client_1_1_user_service_1_1_user_service_client.html", null ]
    ] ],
    [ "ControllerBase", null, [
      [ "WebAPI.Controllers.AuthController", "class_web_a_p_i_1_1_controllers_1_1_auth_controller.html", null ],
      [ "WebAPI.Controllers.ClassesController", "class_web_a_p_i_1_1_controllers_1_1_classes_controller.html", null ],
      [ "WebAPI.Controllers.FeedbacksController", "class_web_a_p_i_1_1_controllers_1_1_feedbacks_controller.html", null ],
      [ "WebAPI.Controllers.HandInsController", "class_web_a_p_i_1_1_controllers_1_1_hand_ins_controller.html", null ],
      [ "WebAPI.Controllers.HomeworksController", "class_web_a_p_i_1_1_controllers_1_1_homeworks_controller.html", null ],
      [ "WebAPI.Controllers.LessonsController", "class_web_a_p_i_1_1_controllers_1_1_lessons_controller.html", null ],
      [ "WebAPI.Controllers.UsersController", "class_web_a_p_i_1_1_controllers_1_1_users_controller.html", null ]
    ] ],
    [ "Domain.Models.Feedback", "class_domain_1_1_models_1_1_feedback.html", null ],
    [ "xUnit.Tests.FeedbackLogicTests", "classx_unit_1_1_tests_1_1_feedback_logic_tests.html", null ],
    [ "Domain.Models.HandInHomework", "class_domain_1_1_models_1_1_hand_in_homework.html", null ],
    [ "xUnit.Tests.HandInHomeworkLogicTests", "classx_unit_1_1_tests_1_1_hand_in_homework_logic_tests.html", null ],
    [ "Domain.Models.Homework", "class_domain_1_1_models_1_1_homework.html", null ],
    [ "Domain.DTOs.HomeworkDTO.HomeworkCreationDTO", "class_domain_1_1_d_t_os_1_1_homework_d_t_o_1_1_homework_creation_d_t_o.html", null ],
    [ "Domain.DTOs.HomeworkDTO.HomeworkHandInDTO", "class_domain_1_1_d_t_os_1_1_homework_d_t_o_1_1_homework_hand_in_d_t_o.html", null ],
    [ "xUnit.Tests.HomeworkLogicTests", "classx_unit_1_1_tests_1_1_homework_logic_tests.html", null ],
    [ "pb.IBufferMessage", null, [
      [ "gRPCClient.ClassData", "classg_r_p_c_client_1_1_class_data.html", null ],
      [ "gRPCClient.ClassEntityCreation", "classg_r_p_c_client_1_1_class_entity_creation.html", null ],
      [ "gRPCClient.Feedback", "classg_r_p_c_client_1_1_feedback.html", null ],
      [ "gRPCClient.HandInHomework", "classg_r_p_c_client_1_1_hand_in_homework.html", null ],
      [ "gRPCClient.Homework", "classg_r_p_c_client_1_1_homework.html", null ],
      [ "gRPCClient.LessonAttendance", "classg_r_p_c_client_1_1_lesson_attendance.html", null ],
      [ "gRPCClient.LessonAttended", "classg_r_p_c_client_1_1_lesson_attended.html", null ],
      [ "gRPCClient.LessonData", "classg_r_p_c_client_1_1_lesson_data.html", null ],
      [ "gRPCClient.LessonOverview", "classg_r_p_c_client_1_1_lesson_overview.html", null ],
      [ "gRPCClient.RequestAddFeedback", "classg_r_p_c_client_1_1_request_add_feedback.html", null ],
      [ "gRPCClient.RequestAddHomework", "classg_r_p_c_client_1_1_request_add_homework.html", null ],
      [ "gRPCClient.RequestCreateClassEntity", "classg_r_p_c_client_1_1_request_create_class_entity.html", null ],
      [ "gRPCClient.RequestCreateHandInHomework", "classg_r_p_c_client_1_1_request_create_hand_in_homework.html", null ],
      [ "gRPCClient.RequestCreateLesson", "classg_r_p_c_client_1_1_request_create_lesson.html", null ],
      [ "gRPCClient.RequestCreateUser", "classg_r_p_c_client_1_1_request_create_user.html", null ],
      [ "gRPCClient.RequestDeleteLesson", "classg_r_p_c_client_1_1_request_delete_lesson.html", null ],
      [ "gRPCClient.RequestDeleteUser", "classg_r_p_c_client_1_1_request_delete_user.html", null ],
      [ "gRPCClient.RequestGetAttendance", "classg_r_p_c_client_1_1_request_get_attendance.html", null ],
      [ "gRPCClient.RequestGetClassAttendance", "classg_r_p_c_client_1_1_request_get_class_attendance.html", null ],
      [ "gRPCClient.RequestGetClassAttendanceByUsername", "classg_r_p_c_client_1_1_request_get_class_attendance_by_username.html", null ],
      [ "gRPCClient.RequestGetClassEntities", "classg_r_p_c_client_1_1_request_get_class_entities.html", null ],
      [ "gRPCClient.RequestGetClassEntity", "classg_r_p_c_client_1_1_request_get_class_entity.html", null ],
      [ "gRPCClient.RequestGetClassEntityByStudentUsername", "classg_r_p_c_client_1_1_request_get_class_entity_by_student_username.html", null ],
      [ "gRPCClient.RequestGetClassParticipants", "classg_r_p_c_client_1_1_request_get_class_participants.html", null ],
      [ "gRPCClient.RequestGetFeedbackByHandInIdAndStudentUsername", "classg_r_p_c_client_1_1_request_get_feedback_by_hand_in_id_and_student_username.html", null ],
      [ "gRPCClient.RequestGetFeedbackById", "classg_r_p_c_client_1_1_request_get_feedback_by_id.html", null ],
      [ "gRPCClient.RequestGetHandInByHomeworkIdAndStudentUsername", "classg_r_p_c_client_1_1_request_get_hand_in_by_homework_id_and_student_username.html", null ],
      [ "gRPCClient.RequestGetHandInHomework", "classg_r_p_c_client_1_1_request_get_hand_in_homework.html", null ],
      [ "gRPCClient.RequestGetHandInsByHomeworkId", "classg_r_p_c_client_1_1_request_get_hand_ins_by_homework_id.html", null ],
      [ "gRPCClient.RequestGetLessonById", "classg_r_p_c_client_1_1_request_get_lesson_by_id.html", null ],
      [ "gRPCClient.RequestGetLessonExtendedByHomeworkHandInFeedback", "classg_r_p_c_client_1_1_request_get_lesson_extended_by_homework_hand_in_feedback.html", null ],
      [ "gRPCClient.RequestGetLessonsByClassId", "classg_r_p_c_client_1_1_request_get_lessons_by_class_id.html", null ],
      [ "gRPCClient.RequestMarkAttendance", "classg_r_p_c_client_1_1_request_mark_attendance.html", null ],
      [ "gRPCClient.RequestUpdateClassParticipants", "classg_r_p_c_client_1_1_request_update_class_participants.html", null ],
      [ "gRPCClient.RequestUpdateLesson", "classg_r_p_c_client_1_1_request_update_lesson.html", null ],
      [ "gRPCClient.RequestUserGetByUsername", "classg_r_p_c_client_1_1_request_user_get_by_username.html", null ],
      [ "gRPCClient.ResponseAddFeedback", "classg_r_p_c_client_1_1_response_add_feedback.html", null ],
      [ "gRPCClient.ResponseAddHomework", "classg_r_p_c_client_1_1_response_add_homework.html", null ],
      [ "gRPCClient.ResponseCreateClassEntity", "classg_r_p_c_client_1_1_response_create_class_entity.html", null ],
      [ "gRPCClient.ResponseCreateLesson", "classg_r_p_c_client_1_1_response_create_lesson.html", null ],
      [ "gRPCClient.ResponseCreateUser", "classg_r_p_c_client_1_1_response_create_user.html", null ],
      [ "gRPCClient.ResponseDeleteLesson", "classg_r_p_c_client_1_1_response_delete_lesson.html", null ],
      [ "gRPCClient.ResponseDeleteUser", "classg_r_p_c_client_1_1_response_delete_user.html", null ],
      [ "gRPCClient.ResponseGetAttendance", "classg_r_p_c_client_1_1_response_get_attendance.html", null ],
      [ "gRPCClient.ResponseGetClassAttendance", "classg_r_p_c_client_1_1_response_get_class_attendance.html", null ],
      [ "gRPCClient.ResponseGetClassAttendanceByUsername", "classg_r_p_c_client_1_1_response_get_class_attendance_by_username.html", null ],
      [ "gRPCClient.ResponseGetClassEntities", "classg_r_p_c_client_1_1_response_get_class_entities.html", null ],
      [ "gRPCClient.ResponseGetClassEntity", "classg_r_p_c_client_1_1_response_get_class_entity.html", null ],
      [ "gRPCClient.ResponseGetClassParticipants", "classg_r_p_c_client_1_1_response_get_class_participants.html", null ],
      [ "gRPCClient.ResponseGetFeedback", "classg_r_p_c_client_1_1_response_get_feedback.html", null ],
      [ "gRPCClient.ResponseGetHandInHomework", "classg_r_p_c_client_1_1_response_get_hand_in_homework.html", null ],
      [ "gRPCClient.ResponseGetHandInsByHomeworkId", "classg_r_p_c_client_1_1_response_get_hand_ins_by_homework_id.html", null ],
      [ "gRPCClient.ResponseGetLessonById", "classg_r_p_c_client_1_1_response_get_lesson_by_id.html", null ],
      [ "gRPCClient.ResponseGetLessonsByClassId", "classg_r_p_c_client_1_1_response_get_lessons_by_class_id.html", null ],
      [ "gRPCClient.ResponseMarkAttendance", "classg_r_p_c_client_1_1_response_mark_attendance.html", null ],
      [ "gRPCClient.ResponseUpdateClassParticipants", "classg_r_p_c_client_1_1_response_update_class_participants.html", null ],
      [ "gRPCClient.ResponseUpdateLesson", "classg_r_p_c_client_1_1_response_update_lesson.html", null ],
      [ "gRPCClient.ResponseUserGetAllUsers", "classg_r_p_c_client_1_1_response_user_get_all_users.html", null ],
      [ "gRPCClient.ResponseUserGetByUsername", "classg_r_p_c_client_1_1_response_user_get_by_username.html", null ],
      [ "gRPCClient.UserData", "classg_r_p_c_client_1_1_user_data.html", null ],
      [ "gRPCClient.UserParticipant", "classg_r_p_c_client_1_1_user_participant.html", null ]
    ] ],
    [ "Application.ClientInterfaces.IClassClient", "interface_application_1_1_client_interfaces_1_1_i_class_client.html", [
      [ "Application.gRPCClients.ClassClient", "class_application_1_1g_r_p_c_clients_1_1_class_client.html", null ]
    ] ],
    [ "Application.LogicInterfaces.IClassLogic", "interface_application_1_1_logic_interfaces_1_1_i_class_logic.html", [
      [ "Application.Logic.ClassLogic", "class_application_1_1_logic_1_1_class_logic.html", null ]
    ] ],
    [ "Application.ClientInterfaces.IFeedbackClient", "interface_application_1_1_client_interfaces_1_1_i_feedback_client.html", [
      [ "Application.gRPCClients.FeedbackClient", "class_application_1_1g_r_p_c_clients_1_1_feedback_client.html", null ]
    ] ],
    [ "Application.LogicInterfaces.IFeedbackLogic", "interface_application_1_1_logic_interfaces_1_1_i_feedback_logic.html", [
      [ "Application.Logic.FeedbackLogic", "class_application_1_1_logic_1_1_feedback_logic.html", null ]
    ] ],
    [ "Application.ClientInterfaces.IHandInHomeworkClient", "interface_application_1_1_client_interfaces_1_1_i_hand_in_homework_client.html", [
      [ "Application.gRPCClients.HandInHomeworkClient", "class_application_1_1g_r_p_c_clients_1_1_hand_in_homework_client.html", null ]
    ] ],
    [ "Application.LogicInterfaces.IHandInHomeworkLogic", "interface_application_1_1_logic_interfaces_1_1_i_hand_in_homework_logic.html", [
      [ "Application.Logic.HandInHomeworkLogic", "class_application_1_1_logic_1_1_hand_in_homework_logic.html", null ]
    ] ],
    [ "Application.ClientInterfaces.IHomeworkClient", "interface_application_1_1_client_interfaces_1_1_i_homework_client.html", [
      [ "Application.gRPCClients.HomeworkClient", "class_application_1_1g_r_p_c_clients_1_1_homework_client.html", null ]
    ] ],
    [ "Application.LogicInterfaces.IHomeworkLogic", "interface_application_1_1_logic_interfaces_1_1_i_homework_logic.html", [
      [ "Application.Logic.HomeworkLogic", "class_application_1_1_logic_1_1_homework_logic.html", null ]
    ] ],
    [ "Application.ClientInterfaces.ILessonClient", "interface_application_1_1_client_interfaces_1_1_i_lesson_client.html", [
      [ "Application.gRPCClients.LessonClient", "class_application_1_1g_r_p_c_clients_1_1_lesson_client.html", null ]
    ] ],
    [ "Application.LogicInterfaces.ILessonLogic", "interface_application_1_1_logic_interfaces_1_1_i_lesson_logic.html", [
      [ "Application.Logic.LessonLogic", "class_application_1_1_logic_1_1_lesson_logic.html", null ]
    ] ],
    [ "pb.IMessage", null, [
      [ "gRPCClient.ClassData", "classg_r_p_c_client_1_1_class_data.html", null ],
      [ "gRPCClient.ClassEntityCreation", "classg_r_p_c_client_1_1_class_entity_creation.html", null ],
      [ "gRPCClient.Feedback", "classg_r_p_c_client_1_1_feedback.html", null ],
      [ "gRPCClient.HandInHomework", "classg_r_p_c_client_1_1_hand_in_homework.html", null ],
      [ "gRPCClient.Homework", "classg_r_p_c_client_1_1_homework.html", null ],
      [ "gRPCClient.LessonAttendance", "classg_r_p_c_client_1_1_lesson_attendance.html", null ],
      [ "gRPCClient.LessonAttended", "classg_r_p_c_client_1_1_lesson_attended.html", null ],
      [ "gRPCClient.LessonData", "classg_r_p_c_client_1_1_lesson_data.html", null ],
      [ "gRPCClient.LessonOverview", "classg_r_p_c_client_1_1_lesson_overview.html", null ],
      [ "gRPCClient.RequestAddFeedback", "classg_r_p_c_client_1_1_request_add_feedback.html", null ],
      [ "gRPCClient.RequestAddHomework", "classg_r_p_c_client_1_1_request_add_homework.html", null ],
      [ "gRPCClient.RequestCreateClassEntity", "classg_r_p_c_client_1_1_request_create_class_entity.html", null ],
      [ "gRPCClient.RequestCreateHandInHomework", "classg_r_p_c_client_1_1_request_create_hand_in_homework.html", null ],
      [ "gRPCClient.RequestCreateLesson", "classg_r_p_c_client_1_1_request_create_lesson.html", null ],
      [ "gRPCClient.RequestCreateUser", "classg_r_p_c_client_1_1_request_create_user.html", null ],
      [ "gRPCClient.RequestDeleteLesson", "classg_r_p_c_client_1_1_request_delete_lesson.html", null ],
      [ "gRPCClient.RequestDeleteUser", "classg_r_p_c_client_1_1_request_delete_user.html", null ],
      [ "gRPCClient.RequestGetAttendance", "classg_r_p_c_client_1_1_request_get_attendance.html", null ],
      [ "gRPCClient.RequestGetClassAttendance", "classg_r_p_c_client_1_1_request_get_class_attendance.html", null ],
      [ "gRPCClient.RequestGetClassAttendanceByUsername", "classg_r_p_c_client_1_1_request_get_class_attendance_by_username.html", null ],
      [ "gRPCClient.RequestGetClassEntities", "classg_r_p_c_client_1_1_request_get_class_entities.html", null ],
      [ "gRPCClient.RequestGetClassEntity", "classg_r_p_c_client_1_1_request_get_class_entity.html", null ],
      [ "gRPCClient.RequestGetClassEntityByStudentUsername", "classg_r_p_c_client_1_1_request_get_class_entity_by_student_username.html", null ],
      [ "gRPCClient.RequestGetClassParticipants", "classg_r_p_c_client_1_1_request_get_class_participants.html", null ],
      [ "gRPCClient.RequestGetFeedbackByHandInIdAndStudentUsername", "classg_r_p_c_client_1_1_request_get_feedback_by_hand_in_id_and_student_username.html", null ],
      [ "gRPCClient.RequestGetFeedbackById", "classg_r_p_c_client_1_1_request_get_feedback_by_id.html", null ],
      [ "gRPCClient.RequestGetHandInByHomeworkIdAndStudentUsername", "classg_r_p_c_client_1_1_request_get_hand_in_by_homework_id_and_student_username.html", null ],
      [ "gRPCClient.RequestGetHandInHomework", "classg_r_p_c_client_1_1_request_get_hand_in_homework.html", null ],
      [ "gRPCClient.RequestGetHandInsByHomeworkId", "classg_r_p_c_client_1_1_request_get_hand_ins_by_homework_id.html", null ],
      [ "gRPCClient.RequestGetLessonById", "classg_r_p_c_client_1_1_request_get_lesson_by_id.html", null ],
      [ "gRPCClient.RequestGetLessonExtendedByHomeworkHandInFeedback", "classg_r_p_c_client_1_1_request_get_lesson_extended_by_homework_hand_in_feedback.html", null ],
      [ "gRPCClient.RequestGetLessonsByClassId", "classg_r_p_c_client_1_1_request_get_lessons_by_class_id.html", null ],
      [ "gRPCClient.RequestMarkAttendance", "classg_r_p_c_client_1_1_request_mark_attendance.html", null ],
      [ "gRPCClient.RequestUpdateClassParticipants", "classg_r_p_c_client_1_1_request_update_class_participants.html", null ],
      [ "gRPCClient.RequestUpdateLesson", "classg_r_p_c_client_1_1_request_update_lesson.html", null ],
      [ "gRPCClient.RequestUserGetByUsername", "classg_r_p_c_client_1_1_request_user_get_by_username.html", null ],
      [ "gRPCClient.ResponseAddFeedback", "classg_r_p_c_client_1_1_response_add_feedback.html", null ],
      [ "gRPCClient.ResponseAddHomework", "classg_r_p_c_client_1_1_response_add_homework.html", null ],
      [ "gRPCClient.ResponseCreateClassEntity", "classg_r_p_c_client_1_1_response_create_class_entity.html", null ],
      [ "gRPCClient.ResponseCreateLesson", "classg_r_p_c_client_1_1_response_create_lesson.html", null ],
      [ "gRPCClient.ResponseCreateUser", "classg_r_p_c_client_1_1_response_create_user.html", null ],
      [ "gRPCClient.ResponseDeleteLesson", "classg_r_p_c_client_1_1_response_delete_lesson.html", null ],
      [ "gRPCClient.ResponseDeleteUser", "classg_r_p_c_client_1_1_response_delete_user.html", null ],
      [ "gRPCClient.ResponseGetAttendance", "classg_r_p_c_client_1_1_response_get_attendance.html", null ],
      [ "gRPCClient.ResponseGetClassAttendance", "classg_r_p_c_client_1_1_response_get_class_attendance.html", null ],
      [ "gRPCClient.ResponseGetClassAttendanceByUsername", "classg_r_p_c_client_1_1_response_get_class_attendance_by_username.html", null ],
      [ "gRPCClient.ResponseGetClassEntities", "classg_r_p_c_client_1_1_response_get_class_entities.html", null ],
      [ "gRPCClient.ResponseGetClassEntity", "classg_r_p_c_client_1_1_response_get_class_entity.html", null ],
      [ "gRPCClient.ResponseGetClassParticipants", "classg_r_p_c_client_1_1_response_get_class_participants.html", null ],
      [ "gRPCClient.ResponseGetFeedback", "classg_r_p_c_client_1_1_response_get_feedback.html", null ],
      [ "gRPCClient.ResponseGetHandInHomework", "classg_r_p_c_client_1_1_response_get_hand_in_homework.html", null ],
      [ "gRPCClient.ResponseGetHandInsByHomeworkId", "classg_r_p_c_client_1_1_response_get_hand_ins_by_homework_id.html", null ],
      [ "gRPCClient.ResponseGetLessonById", "classg_r_p_c_client_1_1_response_get_lesson_by_id.html", null ],
      [ "gRPCClient.ResponseGetLessonsByClassId", "classg_r_p_c_client_1_1_response_get_lessons_by_class_id.html", null ],
      [ "gRPCClient.ResponseMarkAttendance", "classg_r_p_c_client_1_1_response_mark_attendance.html", null ],
      [ "gRPCClient.ResponseUpdateClassParticipants", "classg_r_p_c_client_1_1_response_update_class_participants.html", null ],
      [ "gRPCClient.ResponseUpdateLesson", "classg_r_p_c_client_1_1_response_update_lesson.html", null ],
      [ "gRPCClient.ResponseUserGetAllUsers", "classg_r_p_c_client_1_1_response_user_get_all_users.html", null ],
      [ "gRPCClient.ResponseUserGetByUsername", "classg_r_p_c_client_1_1_response_user_get_by_username.html", null ],
      [ "gRPCClient.UserData", "classg_r_p_c_client_1_1_user_data.html", null ],
      [ "gRPCClient.UserParticipant", "classg_r_p_c_client_1_1_user_participant.html", null ]
    ] ],
    [ "Application.ClientInterfaces.IUserClient", "interface_application_1_1_client_interfaces_1_1_i_user_client.html", [
      [ "Application.gRPCClients.UserClient", "class_application_1_1g_r_p_c_clients_1_1_user_client.html", null ]
    ] ],
    [ "Application.LogicInterfaces.IUserLogic", "interface_application_1_1_logic_interfaces_1_1_i_user_logic.html", [
      [ "Application.Logic.UserLogic", "class_application_1_1_logic_1_1_user_logic.html", null ]
    ] ],
    [ "Domain.Models.Lesson", "class_domain_1_1_models_1_1_lesson.html", null ],
    [ "Domain.DTOs.LessonDTO.LessonAttendanceDTO", "class_domain_1_1_d_t_os_1_1_lesson_d_t_o_1_1_lesson_attendance_d_t_o.html", null ],
    [ "Domain.DTOs.LessonDTO.LessonCreationDTO", "class_domain_1_1_d_t_os_1_1_lesson_d_t_o_1_1_lesson_creation_d_t_o.html", null ],
    [ "xUnit.Tests.LessonLogicTests", "classx_unit_1_1_tests_1_1_lesson_logic_tests.html", null ],
    [ "Domain.DTOs.LessonDTO.LessonUpdateDTO", "class_domain_1_1_d_t_os_1_1_lesson_d_t_o_1_1_lesson_update_d_t_o.html", null ],
    [ "Domain.DTOs.LessonDTO.MarkAttendanceDTO", "class_domain_1_1_d_t_os_1_1_lesson_d_t_o_1_1_mark_attendance_d_t_o.html", null ],
    [ "Domain.DTOs.ClassDTO.SearchClassAttendanceDTO", "class_domain_1_1_d_t_os_1_1_class_d_t_o_1_1_search_class_attendance_d_t_o.html", null ],
    [ "Domain.DTOs.ClassDTO.SearchClassDTO", "class_domain_1_1_d_t_os_1_1_class_d_t_o_1_1_search_class_d_t_o.html", null ],
    [ "Domain.DTOs.ClassDTO.SearchClassParticipantsDTO", "class_domain_1_1_d_t_os_1_1_class_d_t_o_1_1_search_class_participants_d_t_o.html", null ],
    [ "Domain.Models.User", "class_domain_1_1_models_1_1_user.html", null ],
    [ "Domain.DTOs.UserDTO.UserAttendanceDTO", "class_domain_1_1_d_t_os_1_1_user_d_t_o_1_1_user_attendance_d_t_o.html", null ],
    [ "Domain.DTOs.UserDTO.UserCreationDTO", "class_domain_1_1_d_t_os_1_1_user_d_t_o_1_1_user_creation_d_t_o.html", null ],
    [ "xUnit.Tests.UserLogicTests", "classx_unit_1_1_tests_1_1_user_logic_tests.html", null ],
    [ "Domain.DTOs.UserDTO.UserLoginDTO", "class_domain_1_1_d_t_os_1_1_user_d_t_o_1_1_user_login_d_t_o.html", null ]
];