var searchData=
[
  ['requestaddfeedback_0',['RequestAddFeedback',['../classg_r_p_c_client_1_1_request_add_feedback.html',1,'gRPCClient']]],
  ['requestaddhomework_1',['RequestAddHomework',['../classg_r_p_c_client_1_1_request_add_homework.html',1,'gRPCClient']]],
  ['requestcreateclassentity_2',['RequestCreateClassEntity',['../classg_r_p_c_client_1_1_request_create_class_entity.html',1,'gRPCClient']]],
  ['requestcreatehandinhomework_3',['RequestCreateHandInHomework',['../classg_r_p_c_client_1_1_request_create_hand_in_homework.html',1,'gRPCClient']]],
  ['requestcreatelesson_4',['RequestCreateLesson',['../classg_r_p_c_client_1_1_request_create_lesson.html',1,'gRPCClient']]],
  ['requestcreateuser_5',['RequestCreateUser',['../classg_r_p_c_client_1_1_request_create_user.html',1,'gRPCClient']]],
  ['requestdeletelesson_6',['RequestDeleteLesson',['../classg_r_p_c_client_1_1_request_delete_lesson.html',1,'gRPCClient']]],
  ['requestdeleteuser_7',['RequestDeleteUser',['../classg_r_p_c_client_1_1_request_delete_user.html',1,'gRPCClient']]],
  ['requestgetattendance_8',['RequestGetAttendance',['../classg_r_p_c_client_1_1_request_get_attendance.html',1,'gRPCClient']]],
  ['requestgetclassattendance_9',['RequestGetClassAttendance',['../classg_r_p_c_client_1_1_request_get_class_attendance.html',1,'gRPCClient']]],
  ['requestgetclassattendancebyusername_10',['RequestGetClassAttendanceByUsername',['../classg_r_p_c_client_1_1_request_get_class_attendance_by_username.html',1,'gRPCClient']]],
  ['requestgetclassentities_11',['RequestGetClassEntities',['../classg_r_p_c_client_1_1_request_get_class_entities.html',1,'gRPCClient']]],
  ['requestgetclassentity_12',['RequestGetClassEntity',['../classg_r_p_c_client_1_1_request_get_class_entity.html',1,'gRPCClient']]],
  ['requestgetclassentitybystudentusername_13',['RequestGetClassEntityByStudentUsername',['../classg_r_p_c_client_1_1_request_get_class_entity_by_student_username.html',1,'gRPCClient']]],
  ['requestgetclassparticipants_14',['RequestGetClassParticipants',['../classg_r_p_c_client_1_1_request_get_class_participants.html',1,'gRPCClient']]],
  ['requestgetfeedbackbyhandinidandstudentusername_15',['RequestGetFeedbackByHandInIdAndStudentUsername',['../classg_r_p_c_client_1_1_request_get_feedback_by_hand_in_id_and_student_username.html',1,'gRPCClient']]],
  ['requestgetfeedbackbyid_16',['RequestGetFeedbackById',['../classg_r_p_c_client_1_1_request_get_feedback_by_id.html',1,'gRPCClient']]],
  ['requestgethandinbyhomeworkidandstudentusername_17',['RequestGetHandInByHomeworkIdAndStudentUsername',['../classg_r_p_c_client_1_1_request_get_hand_in_by_homework_id_and_student_username.html',1,'gRPCClient']]],
  ['requestgethandinhomework_18',['RequestGetHandInHomework',['../classg_r_p_c_client_1_1_request_get_hand_in_homework.html',1,'gRPCClient']]],
  ['requestgethandinsbyhomeworkid_19',['RequestGetHandInsByHomeworkId',['../classg_r_p_c_client_1_1_request_get_hand_ins_by_homework_id.html',1,'gRPCClient']]],
  ['requestgetlessonbyid_20',['RequestGetLessonById',['../classg_r_p_c_client_1_1_request_get_lesson_by_id.html',1,'gRPCClient']]],
  ['requestgetlessonextendedbyhomeworkhandinfeedback_21',['RequestGetLessonExtendedByHomeworkHandInFeedback',['../classg_r_p_c_client_1_1_request_get_lesson_extended_by_homework_hand_in_feedback.html',1,'gRPCClient']]],
  ['requestgetlessonsbyclassid_22',['RequestGetLessonsByClassId',['../classg_r_p_c_client_1_1_request_get_lessons_by_class_id.html',1,'gRPCClient']]],
  ['requestmarkattendance_23',['RequestMarkAttendance',['../classg_r_p_c_client_1_1_request_mark_attendance.html',1,'gRPCClient']]],
  ['requestupdateclassparticipants_24',['RequestUpdateClassParticipants',['../classg_r_p_c_client_1_1_request_update_class_participants.html',1,'gRPCClient']]],
  ['requestupdatelesson_25',['RequestUpdateLesson',['../classg_r_p_c_client_1_1_request_update_lesson.html',1,'gRPCClient']]],
  ['requestusergetbyusername_26',['RequestUserGetByUsername',['../classg_r_p_c_client_1_1_request_user_get_by_username.html',1,'gRPCClient']]],
  ['responseaddfeedback_27',['ResponseAddFeedback',['../classg_r_p_c_client_1_1_response_add_feedback.html',1,'gRPCClient']]],
  ['responseaddhomework_28',['ResponseAddHomework',['../classg_r_p_c_client_1_1_response_add_homework.html',1,'gRPCClient']]],
  ['responsecreateclassentity_29',['ResponseCreateClassEntity',['../classg_r_p_c_client_1_1_response_create_class_entity.html',1,'gRPCClient']]],
  ['responsecreatelesson_30',['ResponseCreateLesson',['../classg_r_p_c_client_1_1_response_create_lesson.html',1,'gRPCClient']]],
  ['responsecreateuser_31',['ResponseCreateUser',['../classg_r_p_c_client_1_1_response_create_user.html',1,'gRPCClient']]],
  ['responsedeletelesson_32',['ResponseDeleteLesson',['../classg_r_p_c_client_1_1_response_delete_lesson.html',1,'gRPCClient']]],
  ['responsedeleteuser_33',['ResponseDeleteUser',['../classg_r_p_c_client_1_1_response_delete_user.html',1,'gRPCClient']]],
  ['responsegetattendance_34',['ResponseGetAttendance',['../classg_r_p_c_client_1_1_response_get_attendance.html',1,'gRPCClient']]],
  ['responsegetclassattendance_35',['ResponseGetClassAttendance',['../classg_r_p_c_client_1_1_response_get_class_attendance.html',1,'gRPCClient']]],
  ['responsegetclassattendancebyusername_36',['ResponseGetClassAttendanceByUsername',['../classg_r_p_c_client_1_1_response_get_class_attendance_by_username.html',1,'gRPCClient']]],
  ['responsegetclassentities_37',['ResponseGetClassEntities',['../classg_r_p_c_client_1_1_response_get_class_entities.html',1,'gRPCClient']]],
  ['responsegetclassentity_38',['ResponseGetClassEntity',['../classg_r_p_c_client_1_1_response_get_class_entity.html',1,'gRPCClient']]],
  ['responsegetclassparticipants_39',['ResponseGetClassParticipants',['../classg_r_p_c_client_1_1_response_get_class_participants.html',1,'gRPCClient']]],
  ['responsegetfeedback_40',['ResponseGetFeedback',['../classg_r_p_c_client_1_1_response_get_feedback.html',1,'gRPCClient']]],
  ['responsegethandinhomework_41',['ResponseGetHandInHomework',['../classg_r_p_c_client_1_1_response_get_hand_in_homework.html',1,'gRPCClient']]],
  ['responsegethandinsbyhomeworkid_42',['ResponseGetHandInsByHomeworkId',['../classg_r_p_c_client_1_1_response_get_hand_ins_by_homework_id.html',1,'gRPCClient']]],
  ['responsegetlessonbyid_43',['ResponseGetLessonById',['../classg_r_p_c_client_1_1_response_get_lesson_by_id.html',1,'gRPCClient']]],
  ['responsegetlessonsbyclassid_44',['ResponseGetLessonsByClassId',['../classg_r_p_c_client_1_1_response_get_lessons_by_class_id.html',1,'gRPCClient']]],
  ['responsemarkattendance_45',['ResponseMarkAttendance',['../classg_r_p_c_client_1_1_response_mark_attendance.html',1,'gRPCClient']]],
  ['responseupdateclassparticipants_46',['ResponseUpdateClassParticipants',['../classg_r_p_c_client_1_1_response_update_class_participants.html',1,'gRPCClient']]],
  ['responseupdatelesson_47',['ResponseUpdateLesson',['../classg_r_p_c_client_1_1_response_update_lesson.html',1,'gRPCClient']]],
  ['responseusergetallusers_48',['ResponseUserGetAllUsers',['../classg_r_p_c_client_1_1_response_user_get_all_users.html',1,'gRPCClient']]],
  ['responseusergetbyusername_49',['ResponseUserGetByUsername',['../classg_r_p_c_client_1_1_response_user_get_by_username.html',1,'gRPCClient']]]
];
