var searchData=
[
  ['handinhomework_0',['HandInHomework',['../classg_r_p_c_client_1_1_response_get_hand_in_homework.html#a8fb0b7960174d726394d85bfd384b7d7',1,'gRPCClient::ResponseGetHandInHomework']]],
  ['handinhomeworkid_1',['HandInHomeworkId',['../classg_r_p_c_client_1_1_request_get_hand_in_homework.html#a579935c39861079a89658367ac2eb539',1,'gRPCClient::RequestGetHandInHomework']]],
  ['handinid_2',['handinid',['../classg_r_p_c_client_1_1_request_add_feedback.html#af6d2b55203c2b84a292ab3d1d7e29b46',1,'gRPCClient.RequestAddFeedback.HandInId'],['../classg_r_p_c_client_1_1_request_get_feedback_by_hand_in_id_and_student_username.html#a30031c0e9e8a5841bd0405b056109320',1,'gRPCClient.RequestGetFeedbackByHandInIdAndStudentUsername.HandInId'],['../class_domain_1_1_d_t_os_1_1_feedback_d_t_o_1_1_add_feedback_d_t_o.html#a5f9de0b0ecb4b94eb30218559415f43e',1,'Domain.DTOs.FeedbackDTO.AddFeedbackDTO.HandInId']]],
  ['handins_3',['HandIns',['../classg_r_p_c_client_1_1_response_get_hand_ins_by_homework_id.html#a5ed8d406ba7648af1ba1e983e7b04b30',1,'gRPCClient::ResponseGetHandInsByHomeworkId']]],
  ['hasattended_4',['HasAttended',['../class_domain_1_1_d_t_os_1_1_lesson_d_t_o_1_1_lesson_attendance_d_t_o.html#a702ecd878b5a85a72fb82ecf4588a3bc',1,'Domain::DTOs::LessonDTO::LessonAttendanceDTO']]],
  ['hasemail_5',['HasEmail',['../classg_r_p_c_client_1_1_user_participant.html#a72e768fe1e223f4d5ac9feb9f2c84dca',1,'gRPCClient::UserParticipant']]],
  ['hasid_6',['hasid',['../classg_r_p_c_client_1_1_class_data.html#a3f81f2211ef0aefc9c6d6478ac95379b',1,'gRPCClient.ClassData.HasId'],['../classg_r_p_c_client_1_1_feedback.html#aa91bc819ae1c1b2cfa3d63c6f7cdc172',1,'gRPCClient.Feedback.HasId'],['../classg_r_p_c_client_1_1_hand_in_homework.html#af64a8b749cf6367435bf4a898e0cf8da',1,'gRPCClient.HandInHomework.HasId'],['../classg_r_p_c_client_1_1_homework.html#a51eb6b780ae1b0af160ccea41ce33c00',1,'gRPCClient.Homework.HasId'],['../classg_r_p_c_client_1_1_lesson_data.html#ab019a4060b99861e261db94d2e8e2001',1,'gRPCClient.LessonData.HasId']]],
  ['hasrole_7',['hasrole',['../classg_r_p_c_client_1_1_request_get_class_participants.html#a770c2a91dabbc0db4c6617f65a1014ab',1,'gRPCClient.RequestGetClassParticipants.HasRole'],['../classg_r_p_c_client_1_1_user_participant.html#aaddff25f007e6bba63cac6e9e2b5ea3a',1,'gRPCClient.UserParticipant.HasRole']]],
  ['hasusername_8',['HasUsername',['../classg_r_p_c_client_1_1_request_get_class_entities.html#a9a70c7b8713900d96ff2cf97e8087b6b',1,'gRPCClient::RequestGetClassEntities']]],
  ['homework_9',['homework',['../classg_r_p_c_client_1_1_request_add_homework.html#aa0f28ebc598655c5234329db6a34c7de',1,'gRPCClient.RequestAddHomework.Homework'],['../classg_r_p_c_client_1_1_response_add_homework.html#a5419173a0ad9199a9616d6e77cdb7f90',1,'gRPCClient.ResponseAddHomework.Homework'],['../classg_r_p_c_client_1_1_lesson_data.html#af793868455ca93bbd661d80575ee3e15',1,'gRPCClient.LessonData.Homework'],['../class_domain_1_1_models_1_1_lesson.html#a6800cc982b6b0645af0ffe5654d180fd',1,'Domain.Models.Lesson.Homework']]],
  ['homeworkid_10',['homeworkid',['../classg_r_p_c_client_1_1_request_create_hand_in_homework.html#a9ec6f844890f8068b8a139688a6c6a82',1,'gRPCClient.RequestCreateHandInHomework.HomeworkId'],['../classg_r_p_c_client_1_1_request_get_hand_in_by_homework_id_and_student_username.html#a6cd75f1906e7821fd6262d37d7742f0b',1,'gRPCClient.RequestGetHandInByHomeworkIdAndStudentUsername.HomeworkId'],['../classg_r_p_c_client_1_1_request_get_hand_ins_by_homework_id.html#a0f3b2db31057f99496a819ae1ca232ad',1,'gRPCClient.RequestGetHandInsByHomeworkId.HomeworkId'],['../class_domain_1_1_d_t_os_1_1_homework_d_t_o_1_1_homework_hand_in_d_t_o.html#abbb054ce55500e250392a3494d499c46',1,'Domain.DTOs.HomeworkDTO.HomeworkHandInDTO.HomeworkId']]]
];
